# storycorps-mosaic

./: .gitignore  CORS_ANALYSIS.md  DEPLOY.md  DEPLOY_NOW.md  README.md  asset-manifest.json  deploy.sh  index.html  package.json  test-cors.html  test-deployment.js  vercel.json
.github/workflows/: ci.yml  deploy.yml
api/: chat.js
backend/: .env.example  TESTING.md  discover_patterns.py  explore_api.py  generate_patterns.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  run_tests.py  sample_api_response.json  setup_test_env.sh  test_api_simple.py  test_keyword_analysis.py  test_mosaic_simple.py  test_rate_limiter.py  test_real_api.py  test_with_claude.py  test_with_mock_api.py
backend/src/: __init__.py  intelligent_query.py  models.py  pattern_discovery.py  rate_limiting.py
backend/tests/: mock_storycorps_api.py  test_integration.py  test_pattern_discovery.py  test_rate_limiter.py
frontend/: .env.production  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App-new.css  App.css  App.js
mcp-server/: README.md  SETUP.md  server.py  server_fixed.py  storycorps_desktop.py  storycorps_mcp.py  storycorps_mcp_desktop.py  storycorps_server.py  storycorps_server_fixed.py  storycorps_simple.py  test_server.py
static/css/: main.00ba7b99.css  main.00ba7b99.css.map  main.115c19d2.css  main.115c19d2.css.map  main.1b5fb436.css  main.1b5fb436.css.map  main.480c8f11.css  main.480c8f11.css.map  main.6cae7a81.css  main.6cae7a81.css.map  main.73db677e.css  main.73db677e.css.map  main.75e2e5cc.css  main.75e2e5cc.css.map  (+6 more)
(+25 files in other folders)
